--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,7 @@
         ],
         "parser": "@typescript-eslint/parser",
         "rules": {
-          "prettier/prettier": 2 ,
+          "prettier/prettier": "error" ,
           "no-use-before-define": ["error", { "functions": true, "classes": true }],
           "no-var": "error",
           "prefer-const": "error"
