--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-        "name": "imageAPI",
-        "version": "1.0.0",
+        "name": "images-api",
+        "version": "0.0.1",
         "type": "module",
-        "description": "",
+        "description": "image processing API, used to resize images and a lot more",
         "main": "dist/index.js",
         "scripts": {
-                "start": "node  ./dist/index.js",
+                "start": "node -r dotenv/config ./dist/index.js",
                 "build": "tsc --watch --preserveWatchOutput",
-                "dev": "nodemon  dist/index ",
+                "dev": "nodemon -r dotenv/config ./dist/index.js ",
                 "ts": "ts-node-esm src/index.ts",
                 "test": "jasmine",
                 "prettier": "prettier --config .prettierrc \"src/**/*.ts\" --write",
@@ -17,8 +17,14 @@
         "author": "",
         "license": "ISC",
         "devDependencies": {
+                "@types/cors": "^2.8.12",
+                "@types/express": "^4.17.13",
+                "@types/formidable": "^2.0.5",
                 "@types/jasmine": "^4.3.0",
+                "@types/morgan": "^1.9.3",
                 "@types/node": "^18.7.16",
+                "@types/sharp": "^0.30.5",
+                "@types/supertest": "^2.0.12",
                 "@typescript-eslint/eslint-plugin": "^5.36.2",
                 "@typescript-eslint/parser": "^5.36.2",
                 "eslint": "^8.23.0",
@@ -28,7 +34,16 @@
                 "jasmine-spec-reporter": "^7.0.0",
                 "nodemon": "^2.0.19",
                 "prettier": "^2.7.1",
+                "supertest": "^6.2.4",
                 "ts-node": "^10.9.1",
                 "typescript": "^4.8.3"
+        },
+        "dependencies": {
+                "cors": "^2.8.5",
+                "dotenv": "^16.0.2",
+                "express": "^4.18.1",
+                "formidable": "^2.0.1",
+                "morgan": "^1.10.0",
+                "sharp": "^0.31.0"
         }
 }
