--- a/.eslintrc
+++ b/.eslintrc
@@ -12,9 +12,10 @@
         ],
         "parser": "@typescript-eslint/parser",
         "rules": {
-          "prettier/prettier": "error" ,
+          "prettier/prettier": 1 ,
           "no-use-before-define": ["error", { "functions": true, "classes": true }],
           "no-var": "error",
+          // "no-unused-vars":"off",
           "prefer-const": "error"
         },
         "parserOptions": {
